--- a/packages/lambda/lambda_modbus.yaml
+++ b/packages/lambda/lambda_modbus.yaml
@@ -15,6 +15,8 @@
     type: tcp
     host: 192.168.178.125
     port: 502
+
+## climate sensor to be able to adjust the hot water temperature   
     climates:
         - name: Hot Water
           address: 2050
