--- a/packages/lambda/lambda_automation.yaml
+++ b/packages/lambda/lambda_automation.yaml
@@ -28,8 +28,8 @@
           data: {}
           target:
             entity_id:
-            - counter.eu08l_heat_pump_timing
-            - counter.eu8l_heat_pump_timing_daily
+            - counter.eu08l_heat_pump_cycling
+            - counter.eu8l_heat_pump_cycling_daily
       - conditions:
         - condition: trigger
           id:
@@ -40,8 +40,8 @@
           data: {}
           target:
             entity_id:
-            - counter.eu08l_hot_water_timing
-            - counter.eu08l_hot_water_timing_daily
+            - counter.eu08l_hot_water_cycling
+            - counter.eu08l_hot_water_cycling_daily
     mode: single
   - id: '1727727092095'
     alias: reset counter for daily HP timing
@@ -56,7 +56,7 @@
       data: {}
       target:
         entity_id:
-        - counter.eu8l_heat_pump_timing_daily
-        - counter.eu08l_hot_water_timing_daily
+        - counter.eu8l_heat_pump_cycling_daily
+        - counter.eu08l_hot_water_cycling_daily
     mode: single
   
