--- a/packages/lambda/lambda_sensor.yaml
+++ b/packages/lambda/lambda_sensor.yaml
@@ -1,13 +1,14 @@
 counter:
-
 ## to monitor the heat pump's cycling, here are the sensors.
-  eu08l_heat_pump_cycling:
-    name: eu08l_heat_pump_cycling
-    initial: 6
-  eu08l_hot_water_cycling:
-    name: eu08l_hot_water_cycling
-    initial: 84
-
+## you have to take the initial values from the lambda
+  eu08l_heat_pump_cycling_start:
+    name: eu08l_heat_pump_cycling_start
+    initial: 23
+  eu08l_hot_water_cycling_start:
+    name: eu08l_hot_water_cycling_start
+    initial: 103
+## here are the counters for the daily tacktung, 
+## they are increased via the automation when the Lambda sets the sensor “sensor.eu08l_hp1_operating_state” to 1 = heating or 2 = hot water
   eu8l_heat_pump_cycling_daily:
     name: eu08l_heat_pump_cycling_daily
     initial: 0
@@ -15,3 +16,22 @@ counter:
   eu08l_hot_water_cycling_daily:
     name: eu8l_hot_water_cycling_daily
     initial: 0
+
+# In order to persist and make the total number of cycels evaluable, here are the senors 
+sensor:
+  - platform: template
+    sensors:
+      eu08l_hot_water_cycling:
+        friendly_name: "eu08l_hot_water_cycling"
+        value_template: >
+          {% set count1 = states('counter.eu08l_hot_water_cycling_start') | int(0) %}
+          {% set count2 = states('counter.eu8l_hot_water_cycling_daily') | int(0) %}
+          {{ count1 + count2 }}
+  - platform: template
+    sensors:
+      eu08l_heat_pump_cycling:
+        friendly_name: "eu08l_heat_pump_cycling"
+        value_template: >
+          {% set count1 = states('counter.eu08l_heat_pump_cycling_start') | int(0) %}
+          {% set count2 = states('counter.eu08l_heat_pump_cycling_daily') | int(0) %}
+          {{ count1 + count2 }}
