--- a/packages/deye8k/deye8k_template.yaml
+++ b/packages/deye8k/deye8k_template.yaml
@@ -18,7 +18,7 @@ sensor:
       zaehlerstand:
         friendly_name: "Zählerstand berechnet"
         unit_of_measurement: "kWh"
-        value_template: "{{ (states('input_number.zaehlerstand') | float + states('sensor.deye_total_energy_import') | float -  states('sensor.deye_total_energy_export') | float)| round(2) }}"
+        value_template: "{{ (states('input_number.zaehlerstand') | float(0) + states('sensor.deye_total_energy_import') | float(0) -  states('sensor.deye_total_energy_export') | float(0))| round(2) }}"
 #### PV Power berechnet ######
 ## PV1 + PV2 + BKW
   - platform: template
@@ -27,4 +27,4 @@ sensor:
         friendly_name: "PV Power berechnet (beide Strings + BWK)"
         ## bkw fehlt noch
         unit_of_measurement: "W"
-        value_template: "{{ (states('sensor.deye_pv1_power') | float + states('sensor.deye_pv2_power') | float )| round(2) }}"
+        value_template: "{{ (states('sensor.deye_pv1_power') | float(0) + states('sensor.deye_pv2_power') | float(0) )| round(2) }}"
