Energy usage hot water lambda

--- a/packages/lambda/lambda_automation.yaml
+++ b/packages/lambda/lambda_automation.yaml
@@ -59,4 +59,53 @@
         - counter.eu8l_heat_pump_cycling_daily
         - counter.eu08l_hot_water_cycling_daily
     mode: single
-  
+  - id: '1728392201585'
+    alias: kWh HotWater
+    description: ''
+    triggers:
+    - trigger: state
+      entity_id:
+      - sensor.EU08L_Hp1_Operating_State
+      from: '2'
+      id: from2
+    - trigger: state
+      entity_id:
+      - sensor.EU08L_Hp1_Operating_State
+      id: to2
+      to: '2'
+    conditions: []
+    actions:
+    - choose:
+      - conditions:
+        - condition: trigger
+          id:
+          - to2
+        sequence:
+        - action: input_number.set_value
+          metadata: {}
+          data:
+            value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
+              | float(0) /1000}}'
+          target:
+            entity_id: input_number.energy_hot_water_start
+      - conditions:
+        - condition: trigger
+          id:
+          - from2
+        sequence:
+        - action: input_number.set_value
+          metadata: {}
+          data:
+            value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
+              | float(0) /1000}}'
+          target:
+            entity_id: input_number.energy_hot_water_end
+        - action: input_number.set_value
+          metadata: {}
+          data:
+            value: '{{states(''input_number.energy_hot_water_sum'') | float(0) + (states(''input_number.energy_hot_water_end'')
+              |float(0) - states(''input_number.energy_hot_water_end'') |float(0) )
+              | float(0) /1000}}'
+          target:
+            entity_id: input_number.energy_hot_water_sum
+    mode: single
