--- a/packages/lambda/lambda_automation.yaml
+++ b/packages/lambda/lambda_automation.yaml
@@ -88,7 +88,7 @@
             value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
               | float(0) /1000}}'
           target:
-            entity_id: input_number.energy_hot_water_start
+            entity_id: input_number.eu08l_energy_hot_water_start
       - conditions:
         - condition: trigger
           id:
@@ -100,15 +100,15 @@
             value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
               | float(0) /1000}}'
           target:
-            entity_id: input_number.energy_hot_water_end
+            entity_id: input_number.eu08l_energy_hot_water_end
         - action: input_number.set_value
           metadata: {}
           data:
-            value: '{{states(''input_number.energy_hot_water_sum'') | float(0) + (states(''input_number.energy_hot_water_end'')
-              |float(0) - states(''input_number.energy_hot_water_start'') |float(0)
+            value: '{{states(''input_number.eu08l_energy_hot_water_sum'') | float(0) + (states(''input_number.eu08l_energy_hot_water_end'')
+              |float(0) - states(''input_number.eu08l_energy_hot_water_start'') |float(0)
               ) | float(0)}}'
           target:
-            entity_id: input_number.energy_hot_water_sum
+            entity_id: input_number.eu08l_energy_hot_water_sum
     mode: single
   - id: '1728483475534'
     alias: Heating kWh
@@ -138,7 +138,7 @@
             value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
               | float(0) /1000}}'
           target:
-            entity_id: input_number.energy_heating_start
+            entity_id: input_number.eu08l_energy_heating_start
       - conditions:
         - condition: trigger
           id:
@@ -150,14 +150,14 @@
             value: '{{states(''sensor.eu08l_hp1_compressor_power_consumption_accumulated'')
               | float(0) /1000}}'
           target:
-            entity_id: input_number.energy_heating_end
+            entity_id: input_number.eu08l_energy_heating_end
         - action: input_number.set_value
           metadata: {}
           data:
-            value: '{{states(''input_number.energy_heating_sum'') | float(0) + (states(''input_number.energy_heating_end'')
-              |float(0) - states(''input_number.energy_hot_heating_start'') |float(0)
+            value: '{{states(''input_number.eu08l_energy_heating_sum'') | float(0) + (states(''input_number.eu08l_energy_heating_end'')
+              |float(0) - states(''input_number.eu08l_energy_hot_heating_start'') |float(0)
               ) | float(0)}}'
           target:
-            entity_id: input_number.energy_heating_sum
+            entity_id: input_number.eu08l_energy_heating_sum
     mode: single
   
