--- a/packages/lambda/lambda_sensor.yaml
+++ b/packages/lambda/lambda_sensor.yaml
@@ -45,20 +45,20 @@ sensor:
 
 
 input_number:
-  energy_hot_water_sum:
+  eu08l_energy_hot_water_sum:
     name: "energy_hot_water_sum"
     step: 0.1
     min: 0
     max: 9999999
     unit_of_measurement: "kWh"
-  energy_hot_water_start:
+  eu08l_energy_hot_water_start:
     name: "energy_hot_water_start"
     step: 0.1
     min: 0
     max: 9999999
     initial: 0
     unit_of_measurement: "kWh"
-  energy_hot_water_end:
+  eu08l_energy_hot_water_end:
     name: "energy_hot_water_end"
     step: 0.1
     min: 0
@@ -66,20 +66,20 @@ input_number:
     initial: 0
     unit_of_measurement: "kWh"
 ##### Heating Enery Consumption
-  energy_heating_sum:
+  eu08l_energy_heating_sum:
     name: "energy_heating_sum"
     step: 0.1
     min: 0
     max: 9999999
     unit_of_measurement: "kWh"
-  energy_heating_start:
+  eu08l_energy_heating_start:
     name: "energy_heating_start"
     step: 0.1
     min: 0
     max: 9999999
     initial: 0
     unit_of_measurement: "kWh"
-  energy_heating_end:
+  eu08l_energy_heating_end:
     name: "energy_heating_end"
     step: 0.1
     min: 0
