--- a/packages/lambda/lambda_sensor.yaml
+++ b/packages/lambda/lambda_sensor.yaml
@@ -7,7 +7,7 @@ counter:
   eu08l_hot_water_cycling_start:
     name: eu08l_hot_water_cycling_start
     initial: 113
-## here are the counters for the daily cyceling, 
+## here are the counters for the daily cycling, 
 ## they are increased via the automation when the Lambda sets the sensor “sensor.eu08l_hp1_operating_state” to 1 = heating or 2 = hot water
   eu08l_heat_pump_cycling_daily:
     name: eu08l_heat_pump_cycling_daily
@@ -16,7 +16,7 @@ counter:
   eu08l_hot_water_cycling_daily:
     name: eu8l_hot_water_cycling_daily
     initial: 0
-  ## here the counter for total cyceling values. they will also be incresed as the daily cyceling counter
+  ## here the counter for total cycling values. they will also be incresed as the daily cycling counter
   eu08l_heat_pump_cycling_diff:
     name: eu08l_heat_pump_cycling_diff
     initial: 0
@@ -24,7 +24,7 @@ counter:
   eu08l_hot_water_cycling_diff:
     name: eu8l_hot_water_cycling_diff
     initial: 0
-# In order to show total cyceling values in the dashboard and to persist them in the DB, we have to add the cyceling_start & cyceleing_diff Values 
+# In order to show total cycling values in the dashboard and to persist them in the DB, we have to add the cycling_start & cycleing_diff Values 
 sensor:
   - platform: template
     sensors:
